fix(nav): align items position

--- a/html/practice-two/src/styles/components/nav.css
+++ b/html/practice-two/src/styles/components/nav.css
@@ -1,3 +1,7 @@
+.navbar {
+  align-items: center;
+}
+
 .navbar-list{
   display: flex;
   align-items: center;
